--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
         "twig/twig":"2.0"
     },
     "autoload": {
-        "psr-4": {"App\\src\\": "src/"}
+        "psr-4": {
+            "App\\config\\":"config/",
+            "App\\src\\": "src/"
+        }
     } 
  }
