--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "twig/twig":"2.0"
+        "twig/twig":"2.0",
+        "twbs/bootstrap": "4.5.3"
     },
     "autoload": {
         "psr-4": {
