--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "twig/twig":"2.0",
-        "twbs/bootstrap": "4.5.3"
+        "twbs/bootstrap": "4.5.3",
+        "phpmailer/phpmailer": "^6.2"
     },
     "autoload": {
         "psr-4": {
